# Fastapi-Template

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
app/: __init__.py  config.py  main.py
app/api/: __init__.py
app/api/v1/: __init__.py
app/api/v1/endpoints/: __init__.py  health.py  ingest.py  orders.py  search.py
app/db/: __init__.py  pgvector.py  session.py
app/models/: document.py  order.py  rag.py  search.py
app/prompts/: classification.py  rag.py  snomed.py
app/repositories/: __init__.py  document.py  order.py  vector.py
app/services/: __init__.py  classification.py  embedding.py  generation.py  ingestion.py  order.py  rag.py  retrieval.py
app/utils/: __init__.py  logging.py  prompts.py
docs/: ARCHITECTURE.md  README.md  RULE.md  SETUP_AND_RUN.md
scripts/: ingest_snomed_from_tsv.py  prepare_snomed_data.py
tests/: __init__.py  test_health.py  test_order.py
