[project]
name = "snomed"
version = "0.1.0"
description = "Add your description here"
readme = "docs/README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "python-dotenv>=1.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "asyncpg>=0.30.0",
    # RAG (Langchain + pgvector)
    "langchain-core>=0.3.0",
    "langchain-postgres>=0.0.14",
    "langchain-huggingface>=0.1.0",
    "langchain-anthropic>=0.2.0",
    "langchain-openai>=0.3.0",
    "sentence-transformers>=3.0.0",
    "pandas>=2.0.0",
    "psycopg[binary]>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
